# Ollama-Workbench-2

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
.claude-flow/metrics/: system-metrics.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json
apps/web/src/: app.css  app.html
apps/web/src/lib/components/chat/: AgentSettingsPanel.svelte  ChatInput.svelte  ChatMessage.svelte  ChatWelcome.svelte  (+2 more)
apps/web/src/lib/stores/: agentSettings.ts  brainstorm.ts  chat.ts  connection.ts  index.ts  knowledge.ts  mcp.ts  models.ts  prompts.ts  research.ts  sandbox.ts  settings.ts  tools.ts  workflow.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/brainstorm/: +page.svelte
apps/web/src/routes/chat/: +page.svelte
apps/web/src/routes/compare/: +page.svelte
apps/web/src/routes/knowledge/: +page.svelte
apps/web/src/routes/mcp/: +page.svelte
apps/web/src/routes/models/: +page.svelte
apps/web/src/routes/monitoring/: +page.svelte
apps/web/src/routes/planning/: +page.svelte
apps/web/src/routes/projects/: +page.svelte
apps/web/src/routes/prompts/: +page.svelte
apps/web/src/routes/repos/: +page.svelte
apps/web/src/routes/research/: +page.svelte
apps/web/src/routes/sandbox/: +page.svelte
apps/web/src/routes/settings/: +page.svelte
apps/web/src/routes/tools/: +page.svelte
docker/: Dockerfile.api  Dockerfile.web
docs/: FEATURE-GAP-ANALYSIS.md
(+18 files in other folders)
