[package]
name = "ollama-workbench"
version = "2.0.0"
description = "The Developer's Local LLM IDE"
authors = ["Marc Shade"]
license = "MIT"
repository = "https://github.com/marc-shade/ollama-workbench-2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
